grammars/lava/grammar.js
    source_file: $ => repeat($._node),

    _node: $ => choice(
      $.comment_block,
      $.line_comment,
      $.block_comment_alt,
      $.frontmatter,
      $.raw_block,
      $.javascript_block,
      $.stylesheet_block,
      $.sql_block,
      $.csharp_block,
      $.object,
      $.tag,
      $.shortcode,
      $.shortcode_item,
      $.content,
    ),

    // ─── Content (non-Lava text, typically HTML) ──────
    content: $ => $._content,

    // ─── Comments ─────────────────────────────────────

    // Block comment: {% comment %}...{% endcomment %}
    comment_block: $ => seq(
      $._tag_open,
      alias('comment', $.tag_name),
      $._tag_close,
      optional(alias($._comment_content, $.comment_content)),
      $._tag_open,
      alias('endcomment', $.tag_name),
      $._tag_close,
    ),

    // Line comment: //- ...
    line_comment: _ => token(seq('//-', /[^\n]*/)),

    // Alt block comment: /- ... -/
    block_comment_alt: _ => token(seq('/-', /[\s\S]*?/, '-/')),

    // ─── Frontmatter ──────────────────────────────────
    // {% comment %}---\n...\n---{% endcomment %}
    // Parsed as a special form of comment block with YAML content
    raw_block: $ => seq(
      $._tag_open,
      alias('raw', $.tag_name),
      $._tag_close,
      optional(alias($._raw_content, $.raw_content)),
      $._tag_open,
      alias('endraw', $.tag_name),
      $._tag_close,
    ),

    // ─── Embedded Language Blocks ─────────────────────

    object: $ => seq(
      field('open', $.object_begin),
      optional($._expression),
      field('close', $.object_end),
    ),

    object_begin: _ => token(choice('{{', '{{-')),
    object_end: _ => token(choice('}}', '-}}')),

    // ─── Tags: {% tag_name ... %} ─────────────────────

    tag: $ => seq(
      field('open', alias($._tag_open, $.tag_begin)),
      optional(field('name', $.tag_name)),
      optional($.tag_parameters),
      optional($._expression),
      field('close', alias($._tag_close, $.tag_end)),
    ),

    tag_name: _ => /[a-zA-Z_]\w*/,

    _tag_open: _ => token(choice('{%', '{%-')),
    _tag_close: _ => token(choice('%}', '-%}')),

    // Named parameters: key:'value'
    tag_parameters: $ => repeat1($.parameter),

    parameter: $ => seq(
      field('name', $.attribute_name),
      field('value', $._value),
    ),

    attribute_name: _ => /[a-zA-Z_]\w*:/,

    // ─── Shortcodes: {[ name ... ]} ──────────────────

    shortcode: $ => seq(
      field('open', $.shortcode_begin),
      field('name', $.shortcode_name),
      optional($.tag_parameters),
      field('close', $.shortcode_end),
    ),

    shortcode_begin: _ => token('{['),
    shortcode_end: _ => token(']}'),
    shortcode_name: _ => /[a-zA-Z_]\w*/,

    // Shortcode items: [[ item ... ]]
    shortcode_item: $ => seq(
      field('open', $.shortcode_item_begin),
      field('name', $.shortcode_item_name),
      optional($.tag_parameters),
      field('close', $.shortcode_item_end),
    ),

    shortcode_item_begin: _ => token('[['),
    shortcode_item_end: _ => token(']]'),
    shortcode_item_name: _ => /[a-zA-Z_]\w*/,

    // ─── Expressions ──────────────────────────────────

    _expression: $ => repeat1(choice(
      $.filter,
      $._value,
      $.operator,
      $.word_operator,
      $.assignment_operator,
      $.range,
    )),

    // ─── Filters: | FilterName ────────────────────────

    filter: $ => seq(
      field('pipe', $.pipe),
      field('name', $.filter_name),
      optional(seq(':', $._filter_arguments)),
    ),

    pipe: _ => '|',

    filter_name: _ => token(choice(...FILTER_NAMES)),

    _filter_arguments: $ => seq(
      $._value,
      repeat(seq(',', $._value)),
    ),

    // ─── Values ───────────────────────────────────────

    _value: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.nil,
      $.blank,
      $.empty,
      $.quoted_support,
      $.variable_lookup,
    ),

    // Strings
    string: $ => choice(
      $.string_single,
      $.string_double,
    ),

    string_single: _ => seq("'", /[^']*/, "'"),
    number: _ => /(-|\+)?\s*[0-9]+(\.[0-9]+)?/,

    // Constants
    boolean: _ => choice('true', 'false'),
    quoted_support: _ => choice("'Now'", "'Global'", "'Lava'"),

    // ─── Variables ────────────────────────────────────

    variable_lookup: $ => seq(
      choice(
        $.builtin_variable,
        $.variable,
      ),
      repeat(seq(
        $.property_accessor,
        $.member_access,
      )),
      optional($.index_access),
    ),

    builtin_variable: _ => token(choice(...BUILTIN_VARIABLES)),

    variable: _ => /[a-zA-Z_][\w-]*/,

    member_access: _ => /[\w][\w?-]*/,

    property_accessor: _ => '.',

    operator: _ => choice('==', '!=', '>', '<', '>=', '<='),

    word_operator: _ => choice('and', 'or', 'contains', 'in', 'reversed'),

    assignment_operator: _ => '=',

    // ─── Range: (1..5) ───────────────────────────────
